@@ -686,7 +686,7 @@ JLIB_FORM_INVALID_FORM_RULE="Invalid Form Rule::%s"
 JLIB_FORM_INVALID_FORM_OBJECT="Invalid Form Object::%s"
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
 JLIB_FORM_VALIDATE_FIELD_RULE_MISSING="Validation Rule missing: %s"
-JLIB_FORM_VALIDATE_FIELD_INVALID="Invalid field: %"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Invalid field: %s"
 
 JLIB_HTML_ACCESS_EDIT_GROUPS="Edit Groups"
 JLIB_HTML_ACCESS_MODIFY_DESC_CAPTION_ACL="ACL"
